# hmac

./: .gitignore  CMakeLists.txt  README.md  hmac.vix  vix.json
examples/: hmac_binary_key.cpp  hmac_sha256_basic.cpp  hmac_sha256_bytes.cpp
include/hmac/: hmac.hpp
tests/: test_basic.cpp
